open_ricostruzione/static/less/styles.less
@import "bootstrap/bootstrap.less";
@import url(http://fonts.googleapis.com/css?family=Abel);
//Open Ricostruzione custom Css

body{
  font-family: 'Arial', sans-serif;
  background-color: white;
}

.header{

  #logo_header{

   #logo_top{
     padding-top: @spacing-double;
     padding-bottom: @spacing-double;
     a{
       border: 0;
     }
   }
    #appello{
      padding-left: @spacing-half;
      padding-right: @spacing-half;
      padding-top: @spacing-half;
      padding-bottom: 40px;
      overflow: hidden;
      background-color: #dcf930;
      color: black;
      font: 'Arial', 'sans-serif';
      font-weight: bold;
      letter-spacing: 0px;
      font-size: 16px;

      .iban{
        .title{
          padding-top: 5px;
          font-size: 12px;
          text-transform: uppercase;
        }
        .number{
          background-color: white;
          color: black;
          text-transform: uppercase;
        }
      }
    }
  }

}


#top_navbar{
  background-color: @navbar-color;

  #navbar-span{
    margin-left: @spacing-half;
  }

  .navbar-custom{
    margin-bottom:0;
    font-size: @navbar-size;

    .navbar-inner-custom{
      padding:0;
      border: 0;
      border-radius: 0;
      background-color: @navbar-color;
      border-bottom-color: @navbar-color;
      background-repeat: no-repeat;
      -webkit-box-shadow: none;
      background-image: none;

    }
  }
  .search-query{

    height: 20px;
    padding-bottom: 5px;
    margin-left: @spacing-half;
    padding-left: 5px;
    border-radius: 0;
    background-color: #cacccb;
    color: black;
  }
  .navbar-search{
    .search-query{
      min-width: 380px;
    }
  }

}


#top_home{
  background-color: #e2e3e8;
  max-height: 200px;
}

#home-map{
  margin-top:@spacing-single;
  margin-bottom:@spacing-single;
  height: 550px;

  img{
    max-height: 550px;
  }
}

div.content{
  padding-top: @spacing-single;
  min-height: 500px;

  .evidenza{

    padding-bottom: @spacing-double;
    border-bottom:1px solid #CCC;

    .titolo{
      min-height: @medium-size;
      margin-top: @spacing-single;
      margin-bottom: @spacing-single;
      font-family: 'Abel','sans-serif';
      font-weight: normal;
      text-transform: uppercase;
      font-size: @medium-size;
    }
    .project_row{
      .titolo{
        color: @project-name;
        font-weight: bold;
      }
      .tipologia{
        color: @project-category;

      }
      .box{
        overflow:hidden;
        .n_progetti{
          color:@blue-color;
          float:left;
        }
        .importo{
          float:right;
          font-size: @navbar-size;
          font-weight: bold;
        }
      }

      .spacer{
        clear:both;
        margin-top: @spacing-half;
        margin-bottom: @spacing-half;
        border-bottom: 1px solid #b5b8b6;
        min-height: 1px;
      }
    }

  }
  #map{
    color:black;
    text-align: center;
    font-family: 'Abel','sans-serif';
    font-size: @slogan-size;
    margin-top: @spacing-single;
    padding-top: 150px;
    background-color: @grayLighter;
    width: 400px;
    height: 250px;
  }
  #aggiornamento{
    font-size: 13px;
    color: #7e8080;
    margin-top: 5px;
  }
  #boxes-home{
    margin-left: 200px;
  }
  .boxes{
    margin-left:0px;

    .title{
      color:black;
      text-transform: uppercase;
      font-weight: bold;
      font-size: 12px;
    }
    .box{
      min-height: @spacing-double + 10px;

      .number{
        float:left;
        height:40px;
        width: 80px;
        padding-top: 20px;
        color: white;
        text-align: center;
        font-size: 35px;
      }
      .grandezza{
        float:right;
        height:  @spacing-double;
        width: 85px;
        vertical-align: middle;
        padding-top:10px;
        text-transform: uppercase;
        font-size: 20px;
      }

    }
    .subtitle{
      padding-top: 10px ;
      font-size: @caption-size;
      line-height: @caption-size;
      text-transform: uppercase;

    }
    #donazioni.box {
      .number{
        background-image: url("../img/box_donazioni.png");
        background-size:80px 60px;
        background-position: center;
        background-repeat: no-repeat;
      }
      .grandezza{
        color: @green-color;
      }
    }
    #danno.box{
      .number{
        background-image: url("../img/box_danno.png");
        background-size:80px 60px;
        background-position: center;
        background-repeat: no-repeat;
      }
      .grandezza{
        color: @blue-color;
      }
    }

  }

  #main-title{
    padding-top: @spacing-single;
    line-height: 35px;
    color: black;
    font-family: 'Abel','sans-serif';
    font-size: 35px;
    margin-bottom: 10px;
  }
  #main-subtitle{
    margin-bottom: @spacing-single;
  }
  #main-content{
    #project_list{
      .project_row{
        .titolo{
          color: @project-name;
          font-weight: bold;
        }
        .tipologia{
          color: @project-category;

        }
        .box{
          overflow:hidden;
          .tempi{
            float:left;
          }
          .importi{
            float:right;
            font-size: @navbar-size;
            font-weight: bold;
          }
        }

        .spacer{
          clear:both;
          margin-top: @spacing-half;
          margin-bottom: @spacing-half;
          border-bottom: 1px solid #b5b8b6;
          min-height: 1px;
        }
      }
    }
    #project_data{
      .titolo{
        font-size: @caption-size + 2px;
        text-transform: uppercase;
        font-weight: bold;
        color:black;
        clear: both;
      }
      .data_row{
        margin-top: @spacing-single;
        margin-bottom: @spacing-single;
      }
    }

  }
  #data-content{
    .titolo{
      min-height: @medium-size;
      margin-top: @spacing-single;
      font-family: 'Abel','sans-serif';
      font-weight: normal;
      text-transform: uppercase;
      font-size: @medium-size;
    }
    .slogan{
      text-transform: uppercase;
      font-weight: bold;
      color:black;
      margin-top: @spacing-half;
    }
    .donazioni{
      color: @green-color;
    }
    .danno{
      color: @blue-color;
    }

    .project_list{

      border-top: 1px solid #b5b8b6;
      padding-top: @spacing-half;

      .project_row{
        .titolo{
          color: @project-name;
          font-weight: bold;
        }
        .tipologia{
          color: @project-category;

        }
        .box{
          overflow:hidden;
          .n_progetti{
            color:@blue-color;
            float:left;
          }
          .importo{
            float:right;
            font-size: @navbar-size;
            font-weight: bold;
          }
        }

        .spacer{
          clear:both;
          margin-top: @spacing-half;
          margin-bottom: @spacing-half;
          border-bottom: 1px solid #b5b8b6;
          min-height: 1px;
        }
      }
    }
    #tempi-realizzazione{
      margin-top: @spacing-single;
      margin-bottom: @spacing-single;
      margin-left: 0;
      padding-top: @spacing-single;
      padding-bottom: @spacing-single;
      padding-left: @spacing-single;
      min-height: 100px;
      background-color: @tempi-realizzazione-color;

      .titolo{
        font-family: 'Arial', 'sans-serif';
        font-size: @caption-size + 2px;
        text-transform: uppercase;
        font-weight: bold;
        color:black;
        clear: both;
      }
    }
    #subproj{
      margin-left:0;
      border-bottom: 1px solid #ccc;

      .accordion{
        .accordion-group{
          border: 0;
          color:black;


          a{
            text-decoration: none;
            color:black;
          }
          .titolo{
            text-transform: none;
            line-height: 30px;
          }
          .point{
            margin-right: @spacing-half;
          }
          .triangle{
            float:right;
          }
          .accordion-inner{
            background-color: @subproj-box-color;
            a{
              color: @blue-color;
            }
            .titolo{
              margin-top:@spacing-half;
              line-height: 30px;
              margin-bottom: @spacing-half;
              a{
                color:black;
              }
            }

            .box{
              margin-top: @spacing-half;
              .tempi{
                text-transform: none;
                font-weight: bold;
                color:black;
              }
              .importi{
                text-transform: none;
                font-weight: bold;
                color:black;
              }
            }
          }
        }
      }
    }
  }
  #comment{

    .titolo{
      min-height: @medium-size;
      margin-top: @spacing-single;
      font-family: 'Abel','sans-serif';
      font-weight: normal;
      text-transform: uppercase;
      font-size: @medium-size;
    }
  }
}

footer{
  #green-background{
    min-height: 200px;
    background-color: @footer-green;

    li{
      list-style: square;
    }
    a{
      text-decoration: none;
      color: white;
    }

    .footer{
      padding-top: @spacing-double;
      color:white;

      .title{
        font-family: 'Abel','sans-serif';
        font-size: 30px;
        margin-bottom: 10px;
      }
    }
  }
  #gray-background{
    min-height: 100px;
    background-color: @footer-gray;
    padding-top: @spacing-single;

    #partners{
      img{
        max-height: @spacing-double;
      }
    }
  }
}

